# Impel

./: CMakeLists.txt  Readme.md  conanfile.py  conanfile.txt
.conan/: build.py
.conan/test_package/: CMakeLists.txt  test.cpp
.github/workflows/: ci.yml  conan.yml
cmake/: ImpelConfig.cmake
include/impel/: impel.hpp
tests/: CMakeLists.txt
tests/impel/: impel.test.cpp
